--- a/html/index.html
+++ b/html/index.html
@@ -30,7 +30,7 @@
 </head>
 <body>
   <h1>MTMap — Mitochondrial Genome Mapper <span class="badge">Pyodide</span></h1>
-  <p class="subtitle">Upload up to <strong>20 mitochondrial genomes</strong> in GenBank format (.gb/.gbk/.gbff) and generate the linearized genome map, the CDS/rRNA presence heatmap, and the <strong>normalized-position distance heatmap</strong>. All outputs are downloadable (PNGs, CSVs, ZIP).</p>
+  <p class="subtitle">Upload up to <strong>2=30 mitochondrial genomes</strong> in GenBank format (.gb/.gbk/.gbff) and generate the linearized genome map, the CDS/rRNA presence heatmap, and the <strong>normalized-position distance heatmap</strong>. All outputs are downloadable (PNGs, CSVs, ZIP).</p>
 
   <div class="card">
     <div class="row">
