--- a/html/index.html
+++ b/html/index.html
@@ -113,7 +113,7 @@
     <button id="btnTest1">Test A (single record)</button>
     <button id="btnTest2">Test B (multi-file)</button>
     <button id="btnTest3">Test C (includes 1 invalid — should skip)</button>
-    <button id="btnTest4">Test D (all invalid — should error)</button>
+    <button id="btnTest4">Test D (all invalid — should error)</button></br></br>
     <button id="btnTest5">Test E (latin-1 accents — should parse)</button>
     <button id="btnTest6">Test F (valid but no CDS/rRNA/tRNA — should warn)</button>
     <button id="btnTest7">Test G (anchor letter F for tRNA-Phe)</button>
