--- a/html/index.html
+++ b/html/index.html
@@ -125,12 +125,15 @@
     <div class="grid-3">
       <div>
         <h3>Mitochondrial Map</h3>
+        <img id="img_map" alt="Mitochondrial map" />
       </div>
       <div>
         <h3>Presence Heatmap (CDS/rRNA)</h3>
+        <img id="img_presence" alt="Presence heatmap (CDS/rRNA)" />
       </div>
       <div>
         <h3>Normalized-position Distance Heatmap</h3>
+        <img id="img_normpos" alt="Normalized-position distance heatmap" />
       </div>
     </div>
   </div>
