--- a/html/index.html
+++ b/html/index.html
@@ -785,5 +785,12 @@ ORIGIN
       runTest([{name:'fixture_rnr.gbk', text: GBK_RNR}], 'ND4L');
     });
   </script>
+  <footer style="margin-top:40px; padding-top:12px; border-top:1px solid #ddd; color:#555; font-size:14px; text-align:center;">
+    <p>
+      Produced by <strong>LaBiOmicS</strong> in partnership with <strong>LaGEEvo</strong>.<br/>
+      Available at: <a href="https://github.com/mitOmics/mtMAP" target="_blank">https://github.com/mitOmics/mtMAP</a>
+    </p>
+    <p><em>Citation:</em> [Add article reference here]</p>
+  </footer>
 </body>
 </html>
